# Recreation-Battle-RPG

./: .gitignore  CMakeLists.txt  README.md  action.cpp  action.h  attacks.cpp  attacks.h  buffs.cpp  buffs.h  build.bat  character.cpp  character.h  components.cpp  components.h  debuffs.cpp  debuffs.h  effects.cpp  effects.h  items.cpp  items.h  main.cpp  observer.cpp  observer.h  return_flags.h  spelleffects.cpp  spelleffects.h  spells.cpp  spells.h  status.cpp  status.h  summons.cpp  summons.h  technical.cpp  technical.h  traits.cpp  traits.h
include/actions/: action.h  attacks.h  buffs.h  debuffs.h  items.h  spells.h  summons.h  traits.h
include/core/: character.h  components.h  effects.h  observer.h  return_flags.h  status.h
include/ui/: technical.h
src/actions/: action.cpp  attacks.cpp  buffs.cpp  debuffs.cpp  items.cpp  spells.cpp  summons.cpp  traits.cpp
src/core/: character.cpp  components.cpp  effects.cpp  observer.cpp  status.cpp
src/ui/: technical.cpp
